<resources>
    <string name="app_name">Noodle Authenticator</string>
    <string name="action_about">About…</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="hometown">HomeTown</string>
    <string name="prefs">noodleauth</string>
    <string name="account_count">account.count</string>
    <string name="account_prefix">account.</string>
    <string name="account_name">.name</string>
    <string name="account_key">.key</string>
    <string name="account_otplength">.otpLength</string>
    <string name="account_validity">.validity</string>
    <string name="dlg_account_name">Account name</string>
    <string name="dlg_account_otplength">OTP length</string>
    <string name="dlg_account_validity">Validity</string>
    <string name="dlg_default_validity">30</string>
    <string name="dlg_default_otplength">6</string>
    <string name="dlg_account_key">Key</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="mnu_edit">Edit</string>
    <string name="mnu_duplicate">Duplicate…</string>
    <string name="mnu_delete">Delete</string>
    <string name="mnu_copy">Copy token</string>
    <string name="token">Token</string>
    <string name="default_token">Token</string>
    <string name="about">Copyright © 2020 Maurice Perry</string>
</resources>
